KubernetesFiles/RepositoryManagerNet/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: repositorymanagernetwebui
  namespace: repositorymanagernet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rmn-wui
  template:
    metadata:
      labels:
        app: rmn-wui
    spec:
      containers:
      - image: ghcr.io/bigpod98/repositorymanagernetwebui:latest
        name: rmn-wui
        ports:
        - containerPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: repositorymanagernetapi
  namespace: repositorymanagernet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rmn-api
  template:
    metadata:
      labels:
        app: rmn-api
    spec:
      containers:
      - image: ghcr.io/bigpod98/repositorymanagernetapi:latest
        name: rmn-api
        ports:
        - containerPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: repositorymanagernetuploadapi
  namespace: repositorymanagernet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rmn-uploadapi
  template:
    metadata:
      labels:
        app: rmn-uploadapi
    spec:
      containers:
      - image: ghcr.io/bigpod98/repositorymanagernetuploadapi:latest
        name: rmn-uploadapi
        ports:
        - containerPort: 80
