KubernetesFiles/RepositoryManagerNet/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: repositorymanagernet
spec:
  ingressClassName: nginx
  rules:
  - host: "test.local"
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: repositorymanagernetapi
            port:
              number: 80
      - path: /webui
        pathType: Prefix
        backend:
          service:
            name: repositorymanagernetwebui
            port:
              number: 80
      - path: /api/upload
        pathType: Prefix
        backend:
          service:
            name: repositorymanagernetuploadapi
            port:
              number: 80
